# TerminalVelocity

./: .gitignore  CHANGELOG.md  LICENSE  TerminalVelocity.cabal  flake.nix  typing-practice.cabal
src/: Characters.hs  Main.hs
