cabal-version:      3.4
name:               TerminalVelocity
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://sonic-stride.com/
license:            MIT
license-file:       LICENSE
author:             Johan Yngman
maintainer:         johan.yngman@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:      -Weverything -Wno-missing-signatures -Wno-missing-exported-signatures
                      -Wno-implicit-prelude -Wno-missing-export-lists -Wno-missing-import-lists
                      -Wno-monomorphism-restriction -Wno-type-defaults -Wno-missing-safe-haskell-mode
                      -Wno-unsafe -Wno-missing-local-signatures -Wno-missing-kind-signatures
                      -Wno-all-missed-specialisations -Wno-missed-specialisations
                      -Wno-missing-deriving-strategies -Wno-prepositive-qualified-module
                      -Wno-unused-top-binds

executable TerminalVelocity
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    default-extensions: OverloadedStrings,
                        DuplicateRecordFields,
                        StrictData,
                        OverloadedRecordDot,
                        DeriveDataTypeable,
    build-depends:    base,
                      random,
                      time
    hs-source-dirs:   src
    default-language: GHC2021
