cabal-version:      3.0
name:               typing-practice
version:            0.1.0.0
synopsis:           A simple terminal typing practice game.
-- description:
homepage:           https://johanyngman.com/
license:            MIT
license-file:       LICENSE
author:             Johan Yngman
maintainer:         johan.yngman@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable typing-practice
    import:           warnings
    main-is:          Main.hs
    other-modules:    Characters
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      random >=1.2.1.1,
                      clock >=0.4.1.3
    hs-source-dirs:   src
    default-language: GHC2021
